force-app/main/default/objects/Authorization_setting__c/Authorization_setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Authorization setting</label>
</CustomObject>