force-app/main/default/objects/Authorization_setting__c/fields/Client_secret__c.field-meta.xml
<CustomField>
    <fullName>Client_secret__c</fullName>
    <label>Client secret</label>
    <type>TextArea</type>
</CustomField>