force-app/main/default/objects/Authorization_setting__c/fields/Login__c.field-meta.xml
<CustomField>
    <fullName>Login__c</fullName>
    <label>Login</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>