force-app/main/default/objects/Authorization_setting__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>